# crewai_backend

./: .env  .gitignore  pyproject.toml
src/: main.py
src/controller/: agent_controller.py  crew_controller.py  llm_controller.py  task_controller.py
src/core/: config.py
src/repository/agent/: agent_repo.py
src/repository/crew/: crew_repo.py
src/repository/llm/: llm_repo.py
src/repository/task/: task_repo.py
src/service/agent/: agent_service.py
src/service/crew/: crew_service.py  run_crewai.py  tool_manager.py
src/service/llm/: llm_service.py
src/service/task/: task_service.py
src/utils/: db_client.py
