[project]
name = "crewai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[lite,tools]>=1.6.1",
    "cryptography>=46.0.3",
    "fastapi>=0.124.0",
    "langchain-openai>=1.1.6",
    "litellm>=1.79.0,<1.80.10",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "langchain-google-community>=3.0.0",
    "google-auth-oauthlib>=1.2.3",
]

